Hexadron Launcher Beta 0.9.9.2 security update